<resources>
    <string name="app_name">News Today</string>
    <string name="title_news">News</string>
    <string name="title_favorites">Favorites</string>
    <string name="article_image_content_descriontion">A image of the current notice</string>
    <string name="article_image_favorite_content_descriontion">A image to know is article
        is favorite or no</string>

    <string name="add_favotire">Add to favorites</string>
    <string name="remove_favotire">Remove from favorites</string>

    <string name="notice">Notice</string>

    <!-- NOTICE INFORMATION  -->
    <string name="description">Description:</string>
    <string name="title">Title</string>
    <string name="published_at">Published at:</string>
    <string name="author">Author:</string>
    <string name="source">Source:</string>

    <!-- ERRORS -->
    <string name="error_unknown">An unknown error occurred.</string>
    <string name="error_timeout">The server timeout has expired.</string>
    <string name="error_network">Error with your internet connection.</string>
    <string name="error_badrequest">You have made an incorrect request.</string>
    <string name="error_server">Error on the server.</string>
    <string name="error_info">Error information.</string>
    <string name="loading">Loading...</string>

</resources>
